[gd_scene load_steps=3 format=2]

[ext_resource path="res://UpdateTrainingAMC.gd" type="Script" id=1]
[ext_resource path="res://TrainingTimer.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]

[node name="TrainingPanel" type="Panel" parent="."]
margin_left = 262.0
margin_top = 24.0
margin_right = 816.0
margin_bottom = 809.0
rect_pivot_offset = Vector2( 264, 432 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Training" type="Label" parent="TrainingPanel"]
margin_left = 15.0
margin_top = 43.0
margin_right = 541.0
margin_bottom = 196.0
text = "Training
Each problem is originally worth 7 points.
If you get it wrong, the value of the problem
decreases by 2 points.
Each problem will be worth at least 1 point,
unless you don't submit that problem."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Text" type="Label" parent="TrainingPanel"]
margin_left = 74.0
margin_top = 229.0
margin_right = 152.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( -672, 40 )
text = "Problem 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Description" type="Label" parent="TrainingPanel"]
margin_left = 162.0
margin_top = 229.0
margin_right = 272.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( -760, 40 )
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Status" type="Label" parent="TrainingPanel"]
margin_left = 198.0
margin_top = 257.0
margin_right = 338.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( -696, 16 )
text = "Unattempted (0/7)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Submit" type="Button" parent="TrainingPanel"]
margin_left = 262.0
margin_top = 289.0
margin_right = 342.0
margin_bottom = 318.0
rect_pivot_offset = Vector2( -760, -16 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Answer" type="OptionButton" parent="TrainingPanel"]
margin_left = 174.0
margin_top = 289.0
margin_right = 230.0
margin_bottom = 318.0
rect_pivot_offset = Vector2( -672, -16 )
text = "A"
items = [ "A", null, false, 0, null, "B", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 3, null, "E", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Link" type="Button" parent="TrainingPanel"]
margin_left = 317.0
margin_top = 224.0
margin_right = 523.0
margin_bottom = 253.0
text = "Copy Problem Link (AoPS)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem1Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 129.163
margin_top = 141.84
margin_right = 372.163
margin_bottom = 231.84
dialog_text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Text" type="Label" parent="TrainingPanel"]
margin_left = 74.0
margin_top = 349.0
margin_right = 152.0
margin_bottom = 372.0
text = "Problem 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Description" type="Label" parent="TrainingPanel"]
margin_left = 165.0
margin_top = 349.0
margin_right = 275.0
margin_bottom = 372.0
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Status" type="Label" parent="TrainingPanel"]
margin_left = 206.0
margin_top = 377.0
margin_right = 346.0
margin_bottom = 400.0
text = "Unattempted (0/7)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Submit" type="Button" parent="TrainingPanel"]
margin_left = 262.0
margin_top = 401.0
margin_right = 342.0
margin_bottom = 430.0
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Answer" type="OptionButton" parent="TrainingPanel"]
margin_left = 174.0
margin_top = 401.0
margin_right = 230.0
margin_bottom = 430.0
text = "A"
items = [ "A", null, false, 0, null, "B", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 3, null, "E", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Link" type="Button" parent="TrainingPanel"]
margin_left = 319.121
margin_top = 344.915
margin_right = 525.121
margin_bottom = 373.915
text = "Copy Problem Link (AoPS)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem2Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 129.548
margin_top = 258.813
margin_right = 372.548
margin_bottom = 348.813
dialog_text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Text" type="Label" parent="TrainingPanel"]
margin_left = 74.0
margin_top = 461.0
margin_right = 152.0
margin_bottom = 484.0
text = "Problem 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Description" type="Label" parent="TrainingPanel"]
margin_left = 173.0
margin_top = 461.0
margin_right = 283.0
margin_bottom = 484.0
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Status" type="Label" parent="TrainingPanel"]
margin_left = 214.0
margin_top = 489.0
margin_right = 354.0
margin_bottom = 512.0
text = "Unattempted (0/7)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Submit" type="Button" parent="TrainingPanel"]
margin_left = 278.0
margin_top = 513.0
margin_right = 358.0
margin_bottom = 542.0
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Answer" type="OptionButton" parent="TrainingPanel"]
margin_left = 190.0
margin_top = 513.0
margin_right = 246.0
margin_bottom = 542.0
text = "A"
items = [ "A", null, false, 0, null, "B", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 3, null, "E", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Link" type="Button" parent="TrainingPanel"]
margin_left = 327.121
margin_top = 454.915
margin_right = 533.121
margin_bottom = 483.915
text = "Copy Problem Link (AoPS)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem3Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 129.548
margin_top = 372.176
margin_right = 372.548
margin_bottom = 462.176
dialog_text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Text" type="Label" parent="TrainingPanel"]
margin_left = 82.0
margin_top = 565.0
margin_right = 160.0
margin_bottom = 588.0
rect_pivot_offset = Vector2( 104, 48 )
text = "Problem 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Description" type="Label" parent="TrainingPanel"]
margin_left = 170.0
margin_top = 565.0
margin_right = 280.0
margin_bottom = 588.0
rect_pivot_offset = Vector2( 16, 48 )
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Status" type="Label" parent="TrainingPanel"]
margin_left = 206.0
margin_top = 593.0
margin_right = 346.0
margin_bottom = 616.0
rect_pivot_offset = Vector2( 80, 24 )
text = "Unattempted (0/7)"

[node name="Problem4Submit" type="Button" parent="TrainingPanel"]
margin_left = 270.0
margin_top = 625.0
margin_right = 350.0
margin_bottom = 654.0
rect_pivot_offset = Vector2( 16, -8 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Answer" type="OptionButton" parent="TrainingPanel"]
margin_left = 182.0
margin_top = 625.0
margin_right = 238.0
margin_bottom = 654.0
rect_pivot_offset = Vector2( 104, -8 )
text = "A"
items = [ "A", null, false, 0, null, "B", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 3, null, "E", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Link" type="Button" parent="TrainingPanel"]
margin_left = 327.121
margin_top = 557.915
margin_right = 533.121
margin_bottom = 586.915
text = "Copy Problem Link (AoPS)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem4Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 127.429
margin_top = 485.538
margin_right = 370.429
margin_bottom = 575.538
dialog_text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Text" type="Label" parent="TrainingPanel"]
margin_left = 82.0
margin_top = 669.0
margin_right = 160.0
margin_bottom = 692.0
rect_pivot_offset = Vector2( 104, 48 )
text = "Problem 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Description" type="Label" parent="TrainingPanel"]
margin_left = 170.0
margin_top = 669.0
margin_right = 280.0
margin_bottom = 692.0
rect_pivot_offset = Vector2( 16, 48 )
text = "2016 AMC 8 #1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Status" type="Label" parent="TrainingPanel"]
margin_left = 206.0
margin_top = 697.0
margin_right = 346.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 80, 24 )
text = "Unattempted (0/7)"

[node name="Problem5Submit" type="Button" parent="TrainingPanel"]
margin_left = 270.0
margin_top = 729.0
margin_right = 350.0
margin_bottom = 758.0
rect_pivot_offset = Vector2( 16, -8 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Answer" type="OptionButton" parent="TrainingPanel"]
margin_left = 182.0
margin_top = 729.0
margin_right = 238.0
margin_bottom = 758.0
rect_pivot_offset = Vector2( 104, -8 )
text = "A"
items = [ "A", null, false, 0, null, "B", null, false, 1, null, "C", null, false, 2, null, "D", null, false, 3, null, "E", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Link" type="Button" parent="TrainingPanel"]
margin_left = 327.121
margin_top = 660.915
margin_right = 533.121
margin_bottom = 689.915
text = "Copy Problem Link (AoPS)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Problem5Confirm" type="ConfirmationDialog" parent="TrainingPanel"]
margin_left = 128.489
margin_top = 603.139
margin_right = 371.489
margin_bottom = 693.139
dialog_text = "test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="TrainingPanel"]
wait_time = 7200.0
autostart = true
script = ExtResource( 2 )

[node name="TimeLeft" type="Label" parent="TrainingPanel/Timer"]
margin_left = 579.084
margin_top = 36.5268
margin_right = 714.084
margin_bottom = 59.5268
text = "Time left: 02:00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TrainingPanel/Problem1Submit" to="TrainingPanel" method="_on_ProblemSubmit_pressed" binds= [ 0 ]]
[connection signal="pressed" from="TrainingPanel/Problem1Link" to="TrainingPanel" method="_on_ProblemLink_pressed" binds= [ 0 ]]
[connection signal="confirmed" from="TrainingPanel/Problem1Confirm" to="TrainingPanel" method="_on_answer_confirmed" binds= [ 0 ]]
[connection signal="pressed" from="TrainingPanel/Problem2Submit" to="TrainingPanel" method="_on_ProblemSubmit_pressed" binds= [ 1 ]]
[connection signal="pressed" from="TrainingPanel/Problem2Link" to="TrainingPanel" method="_on_ProblemLink_pressed" binds= [ 1 ]]
[connection signal="confirmed" from="TrainingPanel/Problem2Confirm" to="TrainingPanel" method="_on_answer_confirmed" binds= [ 1 ]]
[connection signal="pressed" from="TrainingPanel/Problem3Submit" to="TrainingPanel" method="_on_ProblemSubmit_pressed" binds= [ 2 ]]
[connection signal="pressed" from="TrainingPanel/Problem3Link" to="TrainingPanel" method="_on_ProblemLink_pressed" binds= [ 2 ]]
[connection signal="confirmed" from="TrainingPanel/Problem3Confirm" to="TrainingPanel" method="_on_answer_confirmed" binds= [ 2 ]]
[connection signal="pressed" from="TrainingPanel/Problem4Submit" to="TrainingPanel" method="_on_ProblemSubmit_pressed" binds= [ 3 ]]
[connection signal="pressed" from="TrainingPanel/Problem4Link" to="TrainingPanel" method="_on_ProblemLink_pressed" binds= [ 3 ]]
[connection signal="confirmed" from="TrainingPanel/Problem4Confirm" to="TrainingPanel" method="_on_answer_confirmed" binds= [ 3 ]]
[connection signal="pressed" from="TrainingPanel/Problem5Submit" to="TrainingPanel" method="_on_ProblemSubmit_pressed" binds= [ 4 ]]
[connection signal="pressed" from="TrainingPanel/Problem5Link" to="TrainingPanel" method="_on_ProblemLink_pressed" binds= [ 4 ]]
[connection signal="confirmed" from="TrainingPanel/Problem5Confirm" to="TrainingPanel" method="_on_answer_confirmed" binds= [ 4 ]]
